kubernetes/ufoo/tech/pagetron/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: pagetron-http
  namespace: argocd

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`status.agrrh.com`) || Host(`status.5426b488.nip.io`)
      middlewares: []
      services:
        - kind: Service
          name: pagetron-frontend
          namespace: pagetron
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: pagetron-api-http
  namespace: argocd

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: (Host(`status.agrrh.com`) || Host(`status.5426b488.nip.io`)) && PathPrefix(`/api/`)
      middlewares:
        - name: whitelist
          namespace: traefik
        - name: pagetron-api-stripprefix
          namespace: argocd
      services:
        - kind: Service
          name: pagetron-backend
          namespace: pagetron
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: pagetron-api-stripprefix
  namespace: argocd

spec:
  stripPrefix:
    prefixes:
      - /api
